<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D8D8D8" >

    <TableRow
        android:id="@+id/tableRowTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/noteAudioTitleTxtV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_audio"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF" >

        <EditText
            android:id="@+id/AudioTitleEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF"
        android:padding="3dp" >

        <ImageButton
            android:id="@+id/noteRecordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/emergency_selector"
            android:contentDescription="@string/record_recording"
            android:onClick="onClick"
            android:padding="20dp"
            android:src="@drawable/ic_record" >
        </ImageButton>

        <ImageButton
            android:id="@+id/notePlayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/drug_selector"
            android:contentDescription="@string/record_play"
            android:onClick="onClick"
            android:padding="20dp"
            android:src="@drawable/ic_av_play" >
        </ImageButton>

        <ImageButton
            android:id="@+id/noteStopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/note_selector"
            android:contentDescription="@string/record_stop"
            android:onClick="onClick"
            android:padding="20dp"
            android:src="@drawable/ic_av_stop" >
        </ImageButton>
    </TableRow>

    <TableRow
        android:id="@+id/tableRowConfirmation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/noteAudioConfirmationTxtV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure_save"
            android:textSize="15sp" />
    </TableRow>

    <LinearLayout
        android:id="@+id/confirmationLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/noteConfirmationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/ic_states_ok"
            android:onClick="onClick"
            android:padding="3dp"
            android:text="@string/save_btn"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/noteCancelConfBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/ic_navigation_cancel"
            android:onClick="onClick"
            android:padding="3dp"
            android:text="@string/emergency_cancelbtn"
            android:textSize="14sp" />
    </LinearLayout>

</TableLayout>