<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:id="@+id/RelativeLayoutCivility"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/RelativeLayoutPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/PictureImageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/take_photo"
                android:onClick="onClick"
                android:scaleType="centerInside"
                android:src="@drawable/ic_take_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/PictureImageView"
                android:background="@drawable/profil_selector"
                android:text="@string/take_photo"
                android:textColor="@color/textWhite"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/civilitySpinner"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/first_name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/last_name"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutBirthday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/birthDayImgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profil_selector"
            android:contentDescription="@string/birthday"
            android:src="@drawable/ic_calendar_birthday" />

        <TextView
            android:id="@+id/birthDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/date_format"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SizeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/size"
            android:inputType="number"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/WeightLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/weight"
            android:inputType="number"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/weightSpinner"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/doctor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/doctor"
        android:singleLine="true" />

    <TextView
        android:id="@+id/bloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_type"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/bloodTypeSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/saveBtnLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profil_selector"
            android:drawableLeft="@drawable/ic_save"
            android:onClick="onClick"
            android:padding="5dp"
            android:text="@string/save_btn"
            android:textColor="@color/textWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>