<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/emergencyNameCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/emergencyProfilCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergencyNameCustom"
        android:layout_marginBottom="5dp"
        android:text="@string/profile"
        android:textSize="13sp" />
    
    <TextView
        android:id="@+id/emergencyTelCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:text="@string/emergency_tel"
        android:textSize="20sp" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/emergencyProfilCustom"
        android:background="@color/emergencyBg" />

</RelativeLayout>